# scribe

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
config/: app.yaml  discovered_templates.yaml
scribe/: main.py
scribe/cli/: helpers.py  main.py
scribe/core/: context_factory.py  generator.py  settings.py  template_finder.py  typings.py
scribe/models/: __init__.py  context.py  custom.py  templates.py
scribe/util/: __init__.py  loader.py  logger.py  schema_loader.py
scripts/: build  format  lint  test
templates/: talking_points.docx
tests/: __init__.py  conftest.py  test_context_factory.py  test_generator.py  test_loader.py  test_logger.py  test_models_templates.py  test_schema_loader.py  test_settings.py  test_template_finder.py
tests/templates/: tpl.docx
