[project]
name = "scribe"
version = "0.1.2"
description = ""
authors = [
    {name = "Alex",email = "aswann@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docxtpl (>=0.20.1,<0.21.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "types-pyyaml (>=6.0.12.20250516,<7.0.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "hypothesis (>=6.135.32,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
scribe = "scribe.cli.main:cli"


[tool.mypy]
python_executable = ".venv/bin/python"